# the_wabe

./: .gitignore  Makefile
wabe-backend/: docker-compose.yml  pyproject.toml
wabe-backend/app/core/: components.py  seeder.py
wabe-backend/app/dao/: entity_dao.py  persistence_config.py
wabe-backend/app/model/: archetypes.py  terrain.py
wabe-backend/test/: persistence_test_config.py  test_dao.py  test_seeder.py
wabe-core/: pyproject.toml
wabe-core/app/core/: seeder.py
wabe-core/app/model/: animals.py
wabe-core/app/service/: event_config.py  orchestrator.py
wabe-core/test/: persistence_test_config.py  test_core.py  test_dao.py  test_service.py  unit_test_config.py
wabe-database/: alembic.ini
wabe-database/alembic/versions/: 69064cf2f77c_initial_schema.py
wabe-frontend/app/: main.py
wabe-frontend/app/templates/: base.html
