[project]
name = "wabe-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ole Holgernes"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "kafka-python (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
